--- a/test/index.html
+++ b/test/index.html
@@ -1,21 +1,277 @@
-<Fieldset.Root>
-  <Fieldset.Legend>Allowed Transaction Type</Fieldset.Legend>
-  <Box border="1px solid" borderColor="gray.600" borderRadius="md" p={3}>
-    <Fieldset.Content>
-      <For each={['Buy', 'Sell', 'Buy to Cover', 'Sell Short', 'None']}>
-        {(value) => (
-          <Checkbox.Root
-            key={value}
-            checked={transactionTypes.includes(value)}
-            onCheckedChange={() => handleTransactionToggle(value)}
-            value={value}
+import {
+  Box,
+  Button,
+  Checkbox,
+  CheckboxGroup,
+  createListCollection,
+  Field,
+  Fieldset,
+  HStack,
+  Input,
+  NativeSelect,
+  Select,
+  Spinner,
+} from "@chakra-ui/react";
+import { useForm, Controller } from "react-hook-form";
+import { useMemo } from "react";
+import { useAsync } from "react-use";
+import { config } from "@/config";
+import { useMutation } from "@tanstack/react-query";
+
+interface IssuerFormData {
+  issuerName: string;
+  issuerType: string;
+  ticker: string;
+  isin: string;
+  cusip: string;
+  sedol: string;
+  instrumentType: string;
+  categoryName: string;
+  transactionTypes: string[];
+  dateRestricted: string;
+  requester: string;
+  notes: string;
+}
+
+interface RestrictionCategories {
+  name: string;
+}
+
+const CreateIssuerModal = ({ onClose }: { onClose: () => void }) => {
+  const { register, handleSubmit, control } = useForm<IssuerFormData>({
+    defaultValues: {
+      transactionTypes: ["None"],
+    },
+  });
+
+  // Fetch Restriction Categories
+  const state = useAsync(async (): Promise<RestrictionCategories[]> => {
+    const response = await fetch(
+      `${config.apis.mdmApi}/EntitledRestrictionCategories`
+    );
+    const data = await response.json();
+    return data;
+  }, []);
+
+  const collection = useMemo(() => {
+    return createListCollection({
+      items: state.value ?? [],
+      itemToString: (categories) => categories.name,
+      itemToValue: (categories) => categories.name,
+    });
+  }, [state.value]);
+
+  // Mutation to create issuer
+  const mutation = useMutation({
+    mutationFn: async (payload: IssuerFormData) => {
+      const url = `${config.apis.mdmApi}/RestrictedIssuer`;
+      const res = await fetch(url, {
+        method: "POST",
+        credentials: "include",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload),
+      });
+      if (!res.ok) throw new Error("Failed to create issuer");
+      return res.json();
+    },
+    onSuccess: () => {
+      onClose();
+    },
+  });
+
+  const onSubmit = (data: IssuerFormData) => {
+    mutation.mutate(data);
+  };
+
+  return (
+    <form onSubmit={handleSubmit(onSubmit)}>
+      {/* Issuer Name + Type */}
+      <HStack gap={4} mb={4}>
+        <Field.Root>
+          <Field.Label>Issuer Name</Field.Label>
+          <Input
+            {...register("issuerName", { required: "Issuer name is required" })}
+            placeholder="Enter value"
+          />
+        </Field.Root>
+        <Field.Root>
+          <Field.Label>Issuer Type</Field.Label>
+          <NativeSelect.Root>
+            <NativeSelect.Field {...register("issuerType")}>
+              <option value="Public">Public</option>
+              <option value="Private">Private</option>
+            </NativeSelect.Field>
+            <NativeSelect.Indicator />
+          </NativeSelect.Root>
+        </Field.Root>
+      </HStack>
+
+      {/* Ticker + ISIN */}
+      <HStack gap={4} mb={4}>
+        <Field.Root>
+          <Field.Label>Ticker</Field.Label>
+          <Input {...register("ticker")} placeholder="Enter value" />
+        </Field.Root>
+        <Field.Root>
+          <Field.Label>ISIN</Field.Label>
+          <Input {...register("isin")} placeholder="Enter value" />
+        </Field.Root>
+      </HStack>
+
+      {/* CUSIP + SEDOL */}
+      <HStack gap={4} mb={4}>
+        <Field.Root>
+          <Field.Label>CUSIP</Field.Label>
+          <Input {...register("cusip")} placeholder="Enter value" />
+        </Field.Root>
+        <Field.Root>
+          <Field.Label>SEDOL</Field.Label>
+          <Input {...register("sedol")} placeholder="Enter value" />
+        </Field.Root>
+      </HStack>
+
+      {/* Instrument Type + Restriction Category */}
+      <HStack gap={4} mb={4}>
+        <Field.Root>
+          <Field.Label>Instrument Type</Field.Label>
+          <NativeSelect.Root>
+            <NativeSelect.Field {...register("instrumentType")}>
+              <option value="Equity">Equity</option>
+              <option value="ADR">ADR</option>
+              <option value="Index">Index</option>
+              <option value="Govt">Govt</option>
+              <option value="Corporate Bond">Corporate Bond</option>
+              <option value="Convertible Bond">Convertible Bond</option>
+            </NativeSelect.Field>
+            <NativeSelect.Indicator />
+          </NativeSelect.Root>
+        </Field.Root>
+
+        {/* Restriction Category Dropdown */}
+        <Controller
+          name="categoryName"
+          control={control}
+          render={({ field }) => (
+            <Select.Root
+              collection={collection}
+              value={
+                collection.items.find((c) => c.name === field.value) || null
+              }
+              onValueChange={(item) => field.onChange(item?.name)}
+            >
+              <Select.HiddenSelect />
+              <Select.Label>Restriction Category</Select.Label>
+              <Select.Control>
+                <Select.Trigger>
+                  <Select.ValueText placeholder="Select Below" />
+                </Select.Trigger>
+                <Select.IndicatorGroup>
+                  {state.loading && (
+                    <Spinner
+                      size="xs"
+                      borderWidth="1.5px"
+                      color="fg.muted"
+                    />
+                  )}
+                  <Select.Indicator />
+                </Select.IndicatorGroup>
+              </Select.Control>
+              <Select.Positioner>
+                <Select.Content>
+                  {collection.items.map((categories) => (
+                    <Select.Item
+                      key={categories.name}
+                      item={categories}
+                    >
+                      {categories.name}
+                      <Select.ItemIndicator />
+                    </Select.Item>
+                  ))}
+                </Select.Content>
+              </Select.Positioner>
+            </Select.Root>
+          )}
+        />
+      </HStack>
+
+      {/* Allowed Transaction Types Dropdown */}
+      <Controller
+        name="transactionTypes"
+        control={control}
+        render={({ field }) => (
+          <Select.Root
+            multiple
+            value={field.value || []}
+            onValueChange={(values) => {
+              if (values.includes("None")) {
+                field.onChange(["None"]);
+              } else if (values.length === 0) {
+                field.onChange(["None"]);
+              } else {
+                field.onChange(values.filter((v) => v !== "None"));
+              }
+            }}
           >
-            <Checkbox.HiddenInput />
-            <Checkbox.Control />
-            <Checkbox.Label>{value}</Checkbox.Label>
-          </Checkbox.Root>
+            <Select.HiddenSelect />
+            <Select.Label>Allowed Transaction Type</Select.Label>
+            <Select.Control>
+              <Select.Trigger>
+                <Select.ValueText placeholder="Select transaction types" />
+              </Select.Trigger>
+              <Select.IndicatorGroup>
+                <Select.Indicator />
+              </Select.IndicatorGroup>
+            </Select.Control>
+            <Select.Positioner>
+              <Select.Content>
+                <CheckboxGroup value={field.value || []}>
+                  {["Buy", "Sell", "Buy to Cover", "Sell Short", "None"].map(
+                    (type) => (
+                      <Checkbox.Root key={type} value={type}>
+                        <Checkbox.HiddenInput />
+                        <Checkbox.Control />
+                        <Checkbox.Label>{type}</Checkbox.Label>
+                      </Checkbox.Root>
+                    )
+                  )}
+                </CheckboxGroup>
+              </Select.Content>
+            </Select.Positioner>
+          </Select.Root>
         )}
-      </For>
-    </Fieldset.Content>
-  </Box>
-</Fieldset.Root>
+      />
+
+      {/* Date + Requester */}
+      <HStack gap={4} mb={4} mt={6}>
+        <Field.Root>
+          <Field.Label>Start Date</Field.Label>
+          <Input {...register("dateRestricted")} type="date" />
+        </Field.Root>
+        <Field.Root>
+          <Field.Label>Restriction Requester</Field.Label>
+          <Input {...register("requester")} placeholder="Enter value" />
+        </Field.Root>
+      </HStack>
+
+      {/* Notes */}
+      <HStack gap={4} mb={4}>
+        <Field.Root>
+          <Field.Label>Restriction Notes</Field.Label>
+          <Input {...register("notes")} placeholder="Enter value" />
+        </Field.Root>
+      </HStack>
+
+      {/* Action Buttons */}
+      <HStack justify="flex-end" mt={6}>
+        <Button variant="outline" onClick={onClose}>
+          Cancel
+        </Button>
+        <Button type="submit" colorScheme="blue" isLoading={mutation.isPending}>
+          Save
+        </Button>
+      </HStack>
+    </form>
+  );
+};
+
+export default CreateIssuerModal;
